unpackaged/main/default/objects/tspa__SessionTypeMapping__c/tspa__SessionTypeMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will have Visual Remote Assistant - Session Type Mapping Configuration</description>
    <label>Visual Remote Assistant - Session Types</label>
</CustomObject>