unpackaged/main/default/objects/tspa__SessionTypeMapping__c/fields/tspa__ActiveSessionTypeTablet__c.field-meta.xml
<CustomField>
    <fullName>tspa__ActiveSessionTypeTablet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActiveSessionTypeTablet</label>
    <type>Checkbox</type>
</CustomField>