unpackaged/main/default/objects/tspa__SessionTypeMapping__c/fields/tspa__Modified_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Modified_Value__c</fullName>
    <label>Modified Value</label>
    <length>254</length>
    <type>Text</type>
</CustomField>