unpackaged/main/default/objects/tspa__SessionTypeMapping__c/fields/tspa__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>tspa__SortOrder__c</fullName>
    <label>SortOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>