unpackaged/main/default/objects/tspa__SessionTypeMapping__c/listViews/tspa__All1.listView-meta.xml
<ListView>
    <fullName>tspa__All1</fullName>
    <columns>NAME</columns>
    <columns>tspa__Original_Value__c</columns>
    <columns>tspa__Modified_Value__c</columns>
    <columns>tspa__ActiveSession__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>